--- a/.gitignore
+++ b/.gitignore
@@ -69,11 +69,12 @@ tags
 *.swp
 
 # Data
-*.png
-*.jpg
-*.mp4
-*.avi
-*.mkv
+# Keep some for demo
+#*.png
+#*.jpg
+#*.mp4
+#*.avi
+#*.mkv
 
 # Visual studio 
 *.suo
