--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "movievis",
-  "version": "0.0.0",
+  "name": "chromatography",
+  "version": "0.0.1",
+  "author": "chromatography team",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "express-handlebars": "~3.0.0",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "ejs": "^2.4.1",
+    "ejs": "^2.3.4",
     "express": "~4.13.1",
+    "express-session": "^1.12.1",
     "jade": "~1.11.0",
-    "kerberos": "0.0.18",
-    "mongodb": "^2.1.4",
-    "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
 }
