--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "express-session": "^1.12.1",
     "jade": "~1.11.0",
+    "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
 }
